<resources>
    <string name="details">Details</string>
    <string name="food_details">Food Details</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="edit">Edit</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="save_log">Save &amp; Log</string>
    <string name="update_log">Update &amp; Log</string>
    <string name="log">Log</string>
    <string name="scan_info_title">Ways To Scan</string>
    <string name="scan_info_message">You can quickly switch between scanning modes to log your food a variety of ways</string>
    <string name="foods">Whole Foods Mode</string>
    <string name="barcode_mode">Barcode Mode</string>
    <string name="nutrition_facts_mode">Nutrition Facts Mode</string>
    <string name="beverages">Beverages</string>
    <string name="packaging">Packaging</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="barcodes">Barcodes</string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scanning">Scanning…</string>
    <string name="place_food">Place your food within the frame.</string>
    <string name="edit_protein">Protein: </string>
    <string name="edit_carbs">Carbs: </string>
    <string name="edit_fat">Fat: </string>
    <string name="calories">Calories</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="serving_size">Serving Size</string>
    <string name="meal_time">Meal Time</string>
    <string name="date">Date</string>
    <string name="select_meal_date">Select meal date</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="delete">Delete</string>
    <string name="daily_nutrition">Daily Nutrition</string>
    <string name="carbs">Carbs</string>
    <string name="carbs_g">Carbs(g)</string>
    <string name="protein">Protein</string>
    <string name="protein_g">Protein(g)</string>
    <string name="fat">Fat</string>
    <string name="fat_g">Fat(g)</string>
    <string name="carbs_per">Carbs(%)</string>
    <string name="protein_per">Protein(%)</string>
    <string name="fat_per">Fat(%)</string>
    <string name="my_diary">My Diary</string>
    <string name="cancel">Cancel</string>
    <string name="next_str">Next</string>
    <string name="engineering_ux_views"><![CDATA[Engineering & UX Views]]></string>
    <string name="engineering_subtitle">Engineering view show raw output of the SDK, and UX show various UX examples.</string>
    <string name="engineering_views">Engineering Views</string>
    <string name="top_3_detected_candidates">Top 3 Detected Candidates</string>
    <string name="top_3_candidates_description">Shows the top 3 recognition results that best match the scanned item.</string>
    <string name="camera_photos"><![CDATA[Camera & Photos]]></string>
    <string name="camera_photos_description">Use the camera, single photo, or photo roll to detect your foods.</string>
    <string name="packaged_food_via_ocr">Packaged Food Via OCR</string>
    <string name="packaged_food_description">Scan the product name and description on the front side of the packaged food.</string>
    <string name="scan_nutrition_facts">Scan the nutrition facts label on the back of the packaged food.</string>
    <string name="nutrition_facts_scanner">Nutrition Facts Scanner</string>
    <string name="nutrition_advisor_views">Nutrition Advisor Views</string>
    <string name="nutrition_advisor">Nutrition Advisor</string>
    <string name="nutrition_advisor_description">Chat with the AI Advisor to get nutrition information and log foods.</string>
    <string name="nutrition_advisor_image_recognition">Nutrition Advisor Image Recognition</string>
    <string name="nutrition_advisor_photo_description">Let the AI Advisor use a single photo from your camera to detect your foods.</string>
    <string name="nutrition_advisor_voice_logging">Nutrition Advisor Voice Logging</string>
    <string name="nutrition_advisor_voice_description">Get nutrition results by speaking to the AI Advisor what you ate using your microphone.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="scan_barcode_description">Scan the barcode usually found on the back side of packaged food.</string>
    <string name="serving">Serving</string>
    <string name="item_added_to_diary">Item(s) Added To Diary</string>
    <string name="custom_food_created">Custom Food(s) Created</string>
    <string name="view_your_diary_or_continue_scanning">View your diary or continue scanning.</string>
    <string name="keep_scanning">Keep Scanning</string>
    <string name="view_diary">View Diary</string>
    <string name="home">Home</string>
    <string name="diary">Diary</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="progress">Progress</string>
    <string name="my_progress">My Progress</string>
    <string name="food_creator">Food Creator</string>
    <string name="weight_tracking">Weight Tracking</string>
    <string name="water_tracking">Water Tracking</string>
    <string name="nutrition_information">Nutrition Information</string>
    <string name="welcome">Welcome</string>
    <string name="not_what_you_re_looking_for_search_manually">Not what you\'re looking for? Search manually</string>
    <string name="macros">Macros</string>
    <string name="micros">Micros</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="today">Today</string>
    <string name="generate_report">Generate Report</string>
    <string name="consumed">Consumed</string>
    <string name="take_photos">Take Photos</string>
    <string name="select_photos">Select Photos</string>
    <string name="food_scanner">Food Scanner</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="barcode_scan">Barcode Scan</string>
    <string name="scan_a_barcode_menu">Scan a Barcode</string>
    <string name="text_search">Text Search</string>
    <string name="photo_logging">Photo Logging</string>
    <string name="use_image">Use Image</string>
    <string name="ai_advisor">AI Advisor</string>
    <string name="voice_logging">Voice Logging</string>
    <string name="favorites">Favorites</string>
    <string name="my_foods">My Foods</string>
    <string name="micros_note">Please note that not all foods in our database have available micronutrient information, so the summary provided may be incomplete.</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="monthly_adherence">Monthly Adherence</string>
    <string name="weekly_adherence">Weekly Adherence</string>
    <string name="my_profile">My Profile</string>
    <string name="tutorials">Tutorials</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="calculated_bmi">Calculated BMI</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height_txt">Height</string>
    <string name="weight_txt">Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="activity_level">Activity Level</string>
    <string name="calorie_deficit">Calorie Deficit</string>
    <string name="diet">Diet</string>
    <string name="water_target">Water Target</string>
    <string name="water_consumed">Water Consumed</string>
    <string name="enter_a_value">Enter a Value</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_target_weight">Enter Target Weight</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="units_for_my_profile">Units for My Profile</string>
    <string name="length">Length</string>
    <string name="reminders">Reminders</string>
    <string name="_8_am_breakfast">8 AM Breakfast</string>
    <string name="_12_pm_lunch">12 PM Lunch</string>
    <string name="_5_pm_dinner">5 PM Dinner</string>
    <string name="daily_nutrition_target">Daily Nutrition Target</string>
    <string name="move_the_sliders_to_adjust_your_targets">Move the sliders to adjust your targets.</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="save_changes">Save Changes</string>
    <string name="log_entire_meal">Log Entire Meal</string>
    <string name="failed_to_fetch_meal_plan">Failed to fetch meal plan.\nTap here to try again!</string>
    <string name="quick_suggestions">Quick Suggestions</string>
    <string name="drag_tray_up_to_view_suggestions_to_log">Drag tray up to view suggestions to log</string>
    <string name="open_food_facts"><u>Open Food Facts</u></string>
    <string name="more_details"><u>More Details</u></string>
    <string name="open_food_facts_info">The nutrition information provided can be found from Open Food Facts, Which is made available under the Open Database License.</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="water">Water</string>
    <string name="remain_to_daily_goal">remain to daily goal</string>
    <string name="weight_trend">Weight Trend</string>
    <string name="water_trend">Water Trend</string>
    <string name="glass">Glass</string>
    <string name="sm_bottle">Sm Bottle</string>
    <string name="lg_bottle">Lg Bottle</string>
    <string name="quick_add">Quick Add</string>
    <string name="your_result">Your Result</string>
    <string name="select_the_foods_you_would_like_to_log">Select the foods you would like to log</string>
    <string name="reselect">Reselect</string>
    <string name="log_selected">Log Selected</string>
    <string name="no_matched_result_found">No matched result found.</string>
    <string name="next_only">Next</string>
    <string name="tap_start_listening_then_say_something_like">Tap <b>Start Listening</b>, then say something like:\n\n<i>“I had one blueberry muffin and a cup of green tea for my breakfast”</i></string>
    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="clear_selected"><u>Clear Selected</u></string>
    <string name="try_again">Try Again</string>
    <string name="generating_results">Generating results…</string>
    <string name="taking_a_good_picture">Taking a good picture</string>
    <string name="food_photo_tip">Make sure all your food items are clearly visible in the shot</string>
    <string name="send">Send</string>
    <string name="type_your_message_here">Type your message here…</string>
    <string name="create_user_food">Create User Food?</string>
    <string name="create_a_user_food_from_this_food">You are about to create a user food from this food</string>
    <string name="create">Create</string>
    <string name="update_log_upon_creating">Update log upon creating?</string>
    <string name="capture_nutrition_facts_label">Capture Nutrition Facts Label</string>
    <string name="capture_a_photo_of_the_entire_nutrition_facts_label">Capture a photo of the entire Nutrition Facts Label</string>
    <string name="no_nutrition_facts_label_found">No Nutrition Facts Label Found</string>
    <string name="please_try_again_or_enter_manually">Please try again or enter manually</string>
    <string name="enter_manually">Enter Manually</string>
</resources>