<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rc_40_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/passio_gray900"
        android:textColorLink="@color/passio_gray900"
        android:textSize="@dimen/_12ssp"
        tools:text="@string/create_user_food" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:textColor="@color/passio_gray900"
        android:textColorLink="@color/passio_gray900"
        android:textSize="@dimen/_10ssp"
        tools:text="@string/create_a_user_food_from_this_food" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel"
            style="@style/btn_negative_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            tools:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/create"
            style="@style/btn_positive_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            tools:text="@string/create" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>