<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/passio_background"
    tools:context=".ui.progress.ProgressFragment">

    <ai.passio.nutrition.uimodule.ui.base.BaseToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/passio_white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblWeight"
        style="@style/TextWeight"
        android:text="@string/weight_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/weight"
        style="@style/EditTextWeight"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblWeight" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weightUnit"
        style="@style/TextProfileUnit"
        app:layout_constraintBottom_toBottomOf="@id/weight"
        app:layout_constraintEnd_toEndOf="@id/weight"
        app:layout_constraintTop_toTopOf="@id/weight"
        tools:text="kg" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblDay"
        style="@style/TextWeight"
        android:text="@string/day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dayValue"
        style="@style/TextWeightEditClone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblDay" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblTime"
        style="@style/TextWeight"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dayValue" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timeValue"
        style="@style/TextWeightEditClone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTime" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancel"
        style="@style/btn_negative_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/btn_positive_action"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>