<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rc_40_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/capture_nutrition_facts_label"
        android:textColor="@color/passio_gray900"
        android:textColorLink="@color/passio_gray900"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:text="@string/capture_a_photo_of_the_entire_nutrition_facts_label"
        android:textColor="@color/passio_gray900"
        android:textColorLink="@color/passio_gray900"
        android:textSize="@dimen/_10ssp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:scaleType="center"
        app:srcCompat="@drawable/img_capture_nutrition_facts_info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/create"
        style="@style/btn_positive_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/ok" />

</androidx.appcompat.widget.LinearLayoutCompat>