<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rc_40_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/taking_a_good_picture"
        android:textColor="@color/passio_gray900"
        android:textColorLink="@color/passio_gray900"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/inter_bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_food_sample" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:linksClickable="true"
        android:padding="8dp"
        android:text="@string/food_photo_tip"
        android:textColor="@color/passio_gray900"
        android:textColorLink="@color/passio_gray900"
        android:textSize="@dimen/_11ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rc_8_purple"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/ok"
        android:textColor="@color/passio_white"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/inter_semi_bold" />

</androidx.appcompat.widget.LinearLayoutCompat>